plugins {
    id 'java'
    id 'application'
    id 'jacoco'
}

group = 'snake'
version = '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.apache.groovy:groovy:4.0.22'
    implementation 'com.puppycrawl.tools:checkstyle:10.14.2'

    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
}

application {
    mainClass = 'Main'
}
jacocoTestReport {
    reports {
        xml.required = true
    }
}